working on test framework

--- a/test-spec/test-the-tester.html
+++ b/test-spec/test-the-tester.html
@@ -11,5 +11,5 @@
 </head>
 <body>
 </body>
-<script type="text/javascript" src="browser-test-runner.js"></script>
+<script type="text/javascript" src="test-the-tester.js"></script>
 </html>
