test framework working for specs now moving on to library

--- a/test-spec/index.html
+++ b/test-spec/index.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="google-code-prettify/run_prettify.js"></script>
     <script type="text/javascript" src="Markdown.Converter.js"></script>
     <script type="text/javascript" src="test-tequila.js"></script>
+    <script type="text/javascript" src="tequila-spec.js"></script>
 </head>
 <body>
 </body>
