--- a/test-spec/index.html
+++ b/test-spec/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="index.css" type="text/css" media="all">
     <script type="text/javascript" src="google-code-prettify/run_prettify.js"></script>
     <script type="text/javascript" src="Markdown.Converter.js"></script>
+
+    <script type="text/javascript" src="../lib/tequila-class.js"></script>
+
     <script type="text/javascript" src="test-tequila.js"></script>
+    <script type="text/javascript" src="../lib/tequila-test.js"></script>
+
     <script type="text/javascript" src="tequila-spec.js"></script>
+
 </head>
 <body>
 </body>
