test framework working for specs now moving on to library

--- a/test-spec/index.html
+++ b/test-spec/index.html
@@ -4,19 +4,16 @@
     <meta charset="utf-8">
     <title>tequila test spec</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css" type="text/css" media="all">
-    <script type="text/javascript" src="google-code-prettify/run_prettify.js"></script>
-    <script type="text/javascript" src="Markdown.Converter.js"></script>
-
-    <script type="text/javascript" src="../lib/tequila-class.js"></script>
-
-    <script type="text/javascript" src="test-tequila.js"></script>
-    <script type="text/javascript" src="../lib/tequila-test.js"></script>
-
-    <script type="text/javascript" src="tequila-spec.js"></script>
-
+    <link rel="stylesheet" href="/test-spec/index.css" type="text/css" media="all">
+    <script type="text/javascript" src="/test-spec/google-code-prettify/run_prettify.js"></script>
+    <script type="text/javascript" src="/test-spec/Markdown.Converter.js"></script>
+    <script type="text/javascript" src="/lib/tequila-class.js"></script>
+    <script type="text/javascript" src="/test-spec/test-tequila.js"></script>
+    <script type="text/javascript" src="/lib/tequila-test.js"></script>
+    <script type="text/javascript" src="/test-spec//tequila-spec.js"></script>
 </head>
 <body>
+<h1>MICROSUX BALLZZZZZ</h1>
 </body>
-<script type="text/javascript" src="browser-test-runner.js"></script>
+<script type="text/javascript">test.render(true);</script>
 </html>
