--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -7,14 +7,20 @@
     <link rel="stylesheet" href="test-runner.css" type="text/css" media="all">
     <script type="text/javascript" src="../test-spec/google-code-prettify/run_prettify.js"></script>
     <script type="text/javascript" src="../test-spec/Markdown.Converter.js"></script>
+
     <script type="text/javascript" src="../class-lib/tequila-class.js"></script>
-    <script type="text/javascript" src="../class-lib/model-class.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-class.js"></script>
+    <script type="text/javascript" src="../class-lib/model-class.js"></script>
+    <script type="text/javascript" src="../class-lib/collection-class.js"></script>
+
     <script type="text/javascript" src="../model-core/user-model.js"></script>
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
+
     <script type="text/javascript" src="../class-lib/tequila-test.js"></script>
-    <script type="text/javascript" src="../class-lib/model-test.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-test.js"></script>
+    <script type="text/javascript" src="../class-lib/model-test.js"></script>
+    <script type="text/javascript" src="../class-lib/collection-test.js"></script>
+
     <script type="text/javascript" src="../model-core/user-test.js"></script>
     <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
