--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -14,6 +14,8 @@
     <script type="text/javascript" src="../class-lib/collection-class.js"></script>
 
     <script type="text/javascript" src="../model-core/user-model.js"></script>
+    <script type="text/javascript" src="../model-core/store-model.js"></script>
+    <script type="text/javascript" src="../model-core/memory-store-model.js"></script>
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
     <script type="text/javascript" src="../class-lib/tequila-test.js"></script>
@@ -22,6 +24,8 @@
     <script type="text/javascript" src="../class-lib/collection-test.js"></script>
 
     <script type="text/javascript" src="../model-core/user-test.js"></script>
+    <script type="text/javascript" src="../model-core/store-test.js"></script>
+    <script type="text/javascript" src="../model-core/memory-store-test.js"></script>
     <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
 <body>
