--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="../class-lib/tequila-class.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-class.js"></script>
     <script type="text/javascript" src="../class-lib/model-class.js"></script>
-    <script type="text/javascript" src="../class-lib/collection-class.js"></script>
+    <script type="text/javascript" src="../class-lib/list-class.js"></script>
 
     <script type="text/javascript" src="../model-core/user-model.js"></script>
     <script type="text/javascript" src="../model-core/store-model.js"></script>
@@ -21,11 +21,14 @@
     <script type="text/javascript" src="../class-lib/tequila-test.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-test.js"></script>
     <script type="text/javascript" src="../class-lib/model-test.js"></script>
-    <script type="text/javascript" src="../class-lib/collection-test.js"></script>
+    <script type="text/javascript" src="../class-lib/list-test.js"></script>
 
     <script type="text/javascript" src="../model-core/user-test.js"></script>
     <script type="text/javascript" src="../model-core/store-test.js"></script>
     <script type="text/javascript" src="../model-core/memory-store-test.js"></script>
+
+    <script type="text/javascript" src="integration/test-store-integration.js"></script>
+
     <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
 <body>
