--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="../model-core/user-model.js"></script>
     <script type="text/javascript" src="../model-core/store-model.js"></script>
     <script type="text/javascript" src="../model-core/memory-store-model.js"></script>
+    <script type="text/javascript" src="../model-core/remote-store-model.js"></script>
 
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
@@ -27,6 +28,7 @@
     <script type="text/javascript" src="../model-core/user-test.js"></script>
     <script type="text/javascript" src="../model-core/store-test.js"></script>
     <script type="text/javascript" src="../model-core/memory-store-test.js"></script>
+    <script type="text/javascript" src="../model-core/remote-store-test.js"></script>
 
     <script type="text/javascript" src="integration/test-store-integration.js"></script>
 
