--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -31,6 +31,7 @@
     <script type="text/javascript" src="../model-core/remote-store-test.js"></script>
 
     <script type="text/javascript" src="integration/test-store-integration.js"></script>
+    <script type="text/javascript" src="integration/test-remoteStore-integration.js"></script>
 
     <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
