--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -8,7 +8,11 @@
     <script type="text/javascript" src="../test-spec/google-code-prettify/run_prettify.js"></script>
     <script type="text/javascript" src="../test-spec/Markdown.Converter.js"></script>
 
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+
+
     <script type="text/javascript" src="../class-lib/tequila-class.js"></script>
+    <script type="text/javascript" src="../class-lib/transport-class.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-class.js"></script>
     <script type="text/javascript" src="../class-lib/model-class.js"></script>
     <script type="text/javascript" src="../class-lib/list-class.js"></script>
@@ -21,6 +25,7 @@
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
     <script type="text/javascript" src="../class-lib/tequila-test.js"></script>
+    <script type="text/javascript" src="../class-lib/transport-test.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-test.js"></script>
     <script type="text/javascript" src="../class-lib/model-test.js"></script>
     <script type="text/javascript" src="../class-lib/list-test.js"></script>
