--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -12,6 +12,7 @@
 
 
     <script type="text/javascript" src="../class-lib/tequila-class.js"></script>
+    <script type="text/javascript" src="../class-lib/message-class.js"></script>
     <script type="text/javascript" src="../class-lib/transport-class.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-class.js"></script>
     <script type="text/javascript" src="../class-lib/model-class.js"></script>
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
     <script type="text/javascript" src="../class-lib/tequila-test.js"></script>
+    <script type="text/javascript" src="../class-lib/message-test.js"></script>
     <script type="text/javascript" src="../class-lib/transport-test.js"></script>
     <script type="text/javascript" src="../class-lib/attribute-test.js"></script>
     <script type="text/javascript" src="../class-lib/model-test.js"></script>
