--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -43,6 +43,6 @@
     <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
 <body>
-<script type="text/javascript">test.render(true);</script>
+<script type="text/javascript">test.runner(true);</script>
 </body>
 </html>
