--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="../model-core/store-model.js"></script>
     <script type="text/javascript" src="../model-core/memory-store-model.js"></script>
     <script type="text/javascript" src="../model-core/remote-store-model.js"></script>
+    <script type="text/javascript" src="../model-core/mongo-store-model.js"></script>
 
     <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
@@ -36,6 +37,7 @@
     <script type="text/javascript" src="../model-core/store-test.js"></script>
     <script type="text/javascript" src="../model-core/memory-store-test.js"></script>
     <script type="text/javascript" src="../model-core/remote-store-test.js"></script>
+    <script type="text/javascript" src="../model-core/mongo-store-test.js"></script>
 
     <script type="text/javascript" src="integration/test-store-integration.js"></script>
 
