--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 
-  <script type="text/javascript" src="../lib/classes/tequila-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/tequila-singleton.js"></script>
   <script type="text/javascript" src="../lib/classes/message-class.js"></script>
   <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
   <script type="text/javascript" src="../lib/classes/attribute-class.js"></script>
@@ -32,6 +32,7 @@
   <script type="text/javascript" src="../lib/classes/transport-test.js"></script>
   <script type="text/javascript" src="../lib/classes/attribute-test.js"></script>
   <script type="text/javascript" src="../lib/classes/command-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/delta-test.js"></script>
   <script type="text/javascript" src="../lib/classes/model-test.js"></script>
   <script type="text/javascript" src="../lib/classes/list-test.js"></script>
 
