stubbed out more of lib and tests disabled to get more document completion (design)

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -11,36 +11,50 @@
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
 
-  <script type="text/javascript" src="../lib/classes/tequila-singleton.js"></script>
-  <script type="text/javascript" src="../lib/classes/message-class.js"></script>
-  <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
   <script type="text/javascript" src="../lib/classes/attribute-class.js"></script>
   <script type="text/javascript" src="../lib/classes/command-class.js"></script>
-  <script type="text/javascript" src="../lib/classes/model-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/delta-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/interface-class.js"></script>
   <script type="text/javascript" src="../lib/classes/list-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/message-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/model-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/procedure-class.js"></script>
   <script type="text/javascript" src="../lib/classes/store-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/tequila-singleton.js"></script>
+  <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/workspace-class.js"></script>
 
+  <script type="text/javascript" src="../lib/models/log-model.js"></script>
+  <script type="text/javascript" src="../lib/models/presentation-model.js"></script>
   <script type="text/javascript" src="../lib/models/user-model.js"></script>
+
   <script type="text/javascript" src="../lib/stores/memory-store.js"></script>
-  <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-store.js"></script>
+  <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
 
   <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
-  <script type="text/javascript" src="../lib/classes/tequila-test.js"></script>
-  <script type="text/javascript" src="../lib/classes/message-test.js"></script>
-  <script type="text/javascript" src="../lib/classes/transport-test.js"></script>
+
   <script type="text/javascript" src="../lib/classes/attribute-test.js"></script>
   <script type="text/javascript" src="../lib/classes/command-test.js"></script>
   <script type="text/javascript" src="../lib/classes/delta-test.js"></script>
-  <script type="text/javascript" src="../lib/classes/model-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/interface-test.js"></script>
   <script type="text/javascript" src="../lib/classes/list-test.js"></script>
-
-  <script type="text/javascript" src="../lib/models/user-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/message-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/model-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/procedure-test.js"></script>
   <script type="text/javascript" src="../lib/classes/store-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/tequila-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/transport-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/workspace-test.js"></script>
+
+  <script type="text/javascript" src="../lib/models/log-test.js"></script>
+  <script type="text/javascript" src="../lib/models/presentation-test.js"></script>
+  <script type="text/javascript" src="../lib/models/user-test.js"></script>
+
   <script type="text/javascript" src="../lib/stores/memory-test.js"></script>
-  <script type="text/javascript" src="../lib/stores/remote-test.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-test.js"></script>
+  <script type="text/javascript" src="../lib/stores/remote-test.js"></script>
 
   <script type="text/javascript" src="integration/test-list-integration.js"></script>
   <script type="text/javascript" src="integration/test-store-integration.js"></script>
