fleshed out models - user has attributes finally

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -10,7 +10,6 @@
 
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-
   <script type="text/javascript" src="../lib/classes/attribute-class.js"></script>
   <script type="text/javascript" src="../lib/classes/command-class.js"></script>
   <script type="text/javascript" src="../lib/classes/delta-class.js"></script>
@@ -24,6 +23,7 @@
   <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
   <script type="text/javascript" src="../lib/classes/workspace-class.js"></script>
 
+  <script type="text/javascript" src="../lib/models/application-model.js"></script>
   <script type="text/javascript" src="../lib/models/log-model.js"></script>
   <script type="text/javascript" src="../lib/models/presentation-model.js"></script>
   <script type="text/javascript" src="../lib/models/user-model.js"></script>
@@ -33,7 +33,6 @@
   <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
 
   <script type="text/javascript" src="../test-spec/test-runner.js"></script>
-
 
   <script type="text/javascript" src="../lib/classes/attribute-test.js"></script>
   <script type="text/javascript" src="../lib/classes/command-test.js"></script>
@@ -48,6 +47,7 @@
   <script type="text/javascript" src="../lib/classes/transport-test.js"></script>
   <script type="text/javascript" src="../lib/classes/workspace-test.js"></script>
 
+  <script type="text/javascript" src="../lib/models/application-test.js"></script>
   <script type="text/javascript" src="../lib/models/log-test.js"></script>
   <script type="text/javascript" src="../lib/models/presentation-test.js"></script>
   <script type="text/javascript" src="../lib/models/user-test.js"></script>
