--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -32,6 +32,10 @@
   <script type="text/javascript" src="../lib/stores/mongo-store.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
 
+  <script type="text/javascript" src="../lib/interfaces/bootstrap3-interface.js"></script>
+  <script type="text/javascript" src="../lib/interfaces/command-line-interface.js"></script>
+  <script type="text/javascript" src="../lib/interfaces/mock-interface.js"></script>
+
   <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
   <script type="text/javascript" src="../lib/classes/attribute-test.js"></script>
@@ -55,6 +59,10 @@
   <script type="text/javascript" src="../lib/stores/memory-test.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-test.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-test.js"></script>
+
+  <script type="text/javascript" src="../lib/interfaces/bootstrap3-test.js"></script>
+  <script type="text/javascript" src="../lib/interfaces/command-line-test.js"></script>
+  <script type="text/javascript" src="../lib/interfaces/mock-test.js"></script>
 
   <script type="text/javascript" src="integration/test-list-integration.js"></script>
   <script type="text/javascript" src="integration/test-store-integration.js"></script>
