put in reds-store and local-store stubs

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -10,6 +10,10 @@
 
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
+  <!-- Library files -->
+
+  <script type="text/javascript" src="../lib/classes/tequila-singleton.js"></script>
+
   <script type="text/javascript" src="../lib/classes/attribute-class.js"></script>
   <script type="text/javascript" src="../lib/classes/command-class.js"></script>
   <script type="text/javascript" src="../lib/classes/delta-class.js"></script>
@@ -19,7 +23,6 @@
   <script type="text/javascript" src="../lib/classes/model-class.js"></script>
   <script type="text/javascript" src="../lib/classes/procedure-class.js"></script>
   <script type="text/javascript" src="../lib/classes/store-class.js"></script>
-  <script type="text/javascript" src="../lib/classes/tequila-singleton.js"></script>
   <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
 
   <script type="text/javascript" src="../lib/models/application-model.js"></script>
@@ -31,10 +34,14 @@
   <script type="text/javascript" src="../lib/stores/memory-store.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-store.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-store.js"></script>
+  <script type="text/javascript" src="../lib/stores/local-store.js"></script>
+  <script type="text/javascript" src="../lib/stores/redis-store.js"></script>
 
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/command-line-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/mock-interface.js"></script>
+
+  <!-- Test Fixtures -->
 
   <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
@@ -59,6 +66,8 @@
   <script type="text/javascript" src="../lib/stores/memory-test.js"></script>
   <script type="text/javascript" src="../lib/stores/mongo-test.js"></script>
   <script type="text/javascript" src="../lib/stores/remote-test.js"></script>
+  <script type="text/javascript" src="../lib/stores/local-test.js"></script>
+  <script type="text/javascript" src="../lib/stores/redis-test.js"></script>
 
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/command-line-test.js"></script>
