added Object.prototype.badActor method to tests and fixed code that broke with it

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -82,6 +82,12 @@
 </head>
 <body>
 <script type="text/javascript">
+
+  // Lay down some shitty code to defend against
+  Object.prototype.badActor = function() {
+    return "I'm just a cook.";
+  };
+
   test.runner(true);
 </script>
 </body>
