--- a/interface/tequila-interface-bootstrap3-prototype/index.html
+++ b/interface/tequila-interface-bootstrap3-prototype/index.html
@@ -77,63 +77,63 @@
   <br>
   <br>
 
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-female fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">Sex</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-info ti-shortcut-button" href="#">
     <i class="fa fa-coffee fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">Drugs</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-music fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">Rock & Roll</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
+    <i class="fa fa-flag fa-2x"></i>
+    <div style="white-space: normal; word-wrap: break-word" class=""><p>Customer Invoices</p></div>
+  </a>
+  <a class="btn btn-default ti-shortcut-button" href="#">
+    <i class="fa fa-flag fa-2x"></i>
+    <div style="white-space: normal; word-wrap: break-word" class="">Project Management</div>
+  </a>
+  <a class="btn btn-default ti-shortcut-button" href="#">
+    <i class="fa fa-flag fa-2x"></i>
+    <div style="white-space: normal; word-wrap: break-word" class="">Contacts</div>
+  </a>
+  <a class="btn btn-default ti-shortcut-button" href="#">
+    <i class="fa fa-flag fa-2x"></i>
+    <div style="white-space: normal; word-wrap: break-word" class="">Accounts</div>
+  </a>
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
-    <i class="fa fa-flag fa-2x"></i>
-    <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
-  </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
-    <i class="fa fa-flag fa-2x"></i>
-    <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
-  </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
-    <i class="fa fa-flag fa-2x"></i>
-    <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
-  </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
-    <i class="fa fa-flag fa-2x"></i>
-    <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
-  </a>
-  <a class="btn btn-lg btn-default ti-shortcut-button" href="#">
+  <a class="btn btn-default ti-shortcut-button" href="#">
     <i class="fa fa-flag fa-2x"></i>
     <div style="white-space: normal; word-wrap: break-word" class="">What is up my homey.  Can you eat my shit please</div>
   </a>
@@ -151,11 +151,6 @@
       <li><a href="#"><i class="i"></i> Make admin</a></li>
     </ul>
   </div>
-
-
-
-
-
 </div>
 <div id="scripts">
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
