--- a/interface/tequila-interface-bootstrap3-prototype/index.html
+++ b/interface/tequila-interface-bootstrap3-prototype/index.html
@@ -159,6 +159,7 @@
   <script src="interface.js"></script>
   <script src="interface-navbar.js"></script>
   <script src="interface-panel.js"></script>
+  <script src="interface-panel-home.js"></script>
 </div>
 </body>
 </html>
