--- a/interface/tequila-interface-bootstrap3-prototype/index.html
+++ b/interface/tequila-interface-bootstrap3-prototype/index.html
@@ -160,6 +160,7 @@
   <script src="interface-navbar.js"></script>
   <script src="interface-panel.js"></script>
   <script src="interface-panel-home.js"></script>
+  <script src="panel-types/panel-type-options.js"></script>
 </div>
 </body>
 </html>
