--- a/interface/tequila-interface-bootstrap3-prototype/index.html
+++ b/interface/tequila-interface-bootstrap3-prototype/index.html
@@ -4,7 +4,7 @@
   <title>tequila-interface-bootstrap3-prototype</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="vendor/css/bootstrap.css" rel="stylesheet">
-  <link href="vendor/css/bootstrap-theme.css" rel="stylesheet">
+  <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
   <link href="interface.css" rel="stylesheet">
 </head>
