--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="../lib/classes/message-class.js"></script>
   <script type="text/javascript" src="../lib/classes/model-class.js"></script>
   <script type="text/javascript" src="../lib/classes/procedure-class.js"></script>
+  <script type="text/javascript" src="../lib/classes/request-class.js"></script>
   <script type="text/javascript" src="../lib/classes/store-class.js"></script>
   <script type="text/javascript" src="../lib/classes/transport-class.js"></script>
 
@@ -40,7 +41,7 @@
   <script type="text/javascript" src="../lib/interfaces/command-line-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/mock-interface.js"></script>
 
-  <!-- Test Fixtures -->
+  <!-- Unit Tests -->
 
   <script type="text/javascript" src="../test-spec/test-runner.js"></script>
 
@@ -52,6 +53,7 @@
   <script type="text/javascript" src="../lib/classes/message-test.js"></script>
   <script type="text/javascript" src="../lib/classes/model-test.js"></script>
   <script type="text/javascript" src="../lib/classes/procedure-test.js"></script>
+  <script type="text/javascript" src="../lib/classes/request-test.js"></script>
   <script type="text/javascript" src="../lib/classes/store-test.js"></script>
   <script type="text/javascript" src="../lib/classes/tequila-test.js"></script>
   <script type="text/javascript" src="../lib/classes/transport-test.js"></script>
@@ -71,6 +73,8 @@
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/command-line-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/mock-test.js"></script>
+
+  <!--Functional and Integration Tests-->
 
   <script type="text/javascript" src="integration/test-list-integration.js"></script>
   <script type="text/javascript" src="integration/test-store-integration.js"></script>
