mock commands started

--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -80,6 +80,7 @@
   <script type="text/javascript" src="integration/test-store-integration.js"></script>
   <script type="text/javascript" src="integration/test-command-integration.js"></script>
   <script type="text/javascript" src="integration/test-procedure-integration.js"></script>
+  <script type="text/javascript" src="integration/test-interface-integration.js"></script>
 
   <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
