--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -5,6 +5,9 @@
   <title>tequila test spec</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="test-runner.css" type="text/css" media="all">
+
+  <!-- Dependencies -->
+
   <script type="text/javascript" src="../test-spec/google-code-prettify/run_prettify.js"></script>
   <script type="text/javascript" src="../test-spec/Markdown.Converter.js"></script>
   <script type="text/javascript" src="/socket.io/socket.io.js"></script>
@@ -81,6 +84,8 @@
   <script type="text/javascript" src="integration/test-command-integration.js"></script>
   <script type="text/javascript" src="integration/test-procedure-integration.js"></script>
   <script type="text/javascript" src="integration/test-interface-integration.js"></script>
+
+  <!--The design spec-->
 
   <script type="text/javascript" src="../test-spec/tequila-spec.js"></script>
 </head>
