--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -84,6 +84,7 @@
   <script type="text/javascript" src="integration/test-command-integration.js"></script>
   <script type="text/javascript" src="integration/test-procedure-integration.js"></script>
   <script type="text/javascript" src="integration/test-interface-integration.js"></script>
+  <script type="text/javascript" src="integration/test-application-integration.js"></script>
 
   <!--The design spec-->
 
